--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
         "sharp": "^0.29.2",
+        "shortid": "^2.2.16",
         "uuid": "^8.3.2",
         "winston": "^3.3.3",
         "yup": "^0.29.3"
