--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "morgan": "^1.10.0",
         "multer": "^1.4.2",
         "node-fetch": "^2.6.1",
+        "nodemon": "^2.0.14",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
         "sharp": "^0.29.2",
