--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "ejs": "^3.1.5",
         "express": "^4.17.1",
         "express-ejs-layouts": "^2.5.0",
+        "express-fileupload": "^1.2.1",
         "express-session": "^1.17.1",
         "jalali-moment": "^3.3.9",
         "mongoose": "^5.10.9",
