--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "morgan": "^1.10.0",
         "multer": "^1.4.2",
         "node-fetch": "^2.6.1",
+        "nodemailer": "^6.7.2",
+        "nodemailer-smtp-transport": "^2.7.4",
         "nodemon": "^2.0.15",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
