--- a/config/config.env
+++ b/config/config.env
@@ -2,3 +2,4 @@ PORT = 3000
 MONGO_URI = mongodb://localhost:27017/blog_db
 CAPTCHA_SECRET = 6Lcs0Q0aAAAAALquivfJL5eHlrSzs-meZ4YZhe9f
 SESSION_SECRET = BHLXhOEr9pk9
+JWT_SECRET = Pdsr7NTP7o4WsmSk
